Source/WebKit2/UIProcess/API/qt/qquickwebview_p_p.h
@@ -185,6 +185,7 @@ protected:
     QQmlComponent* proxyAuthenticationDialog;
     QQmlComponent* filePicker;
     QQmlComponent* databaseQuotaDialog;
+    QQmlComponent* colorChooser;
 
     QList<QUrl> userScripts;
 
